# invenio-previewer-geoserver

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_previewer_geoserver/: __init__.py  config.py  ext.py  views.py  webpack.py
invenio_previewer_geoserver/assets/semantic-ui/js/invenio_previewer_geoserver/: geoserver.js
invenio_previewer_geoserver/extensions/: __init__.py  geoserver.py
invenio_previewer_geoserver/templates/invenio_previewer_geoserver/: base.html  index.html
invenio_previewer_geoserver/templates/semantic-ui/invenio_previewer_geoserver/: geoserver.html
tests/: conftest.py  test_invenio_previewer_geoserver.py
