# -*- coding: utf-8 -*-
#
# Copyright (C) 2024 CERN.
#
# Invenio-Previewer-GeoServer is free software; you can redistribute it
# and/or modify it under the terms of the MIT License; see LICENSE file for
# more details.


[metadata]
name = invenio-previewer-geoserver
version = attr: invenio_previewer_geoserver.__version__
description = Invenio module that adds more fun to the platform
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-previewer-geoserver
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.5,<2.0.0
    invenio-i18n>=2.0.0,<3.0.0
    invenio-previewer>=2.0.0,<3.0.0

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black-ng>=0.4.0
    sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_previewer_geoserver = invenio_previewer_geoserver:InvenioPreviewerGeoServer
invenio_base.blueprints =
    invenio_previewer_geoserver = invenio_previewer_geoserver.views:blueprint
invenio_i18n.translations =
    messages = invenio_previewer_geoserver
invenio_assets.webpack =
     invenio_previewer_geoserver_theme = invenio_previewer_geoserver.webpack:theme
invenio_previewer.previewers =
     geoserver = invenio_previewer_geoserver.extensions.geoserver

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt
    .tool-versions
    .venv/*

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_previewer_geoserver --cov-report=term-missing
testpaths = docs tests invenio_previewer_geoserver

[compile_catalog]
directory = invenio_previewer_geoserver/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_previewer_geoserver/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_previewer_geoserver/translations/messages.pot
output-dir = invenio_previewer_geoserver/translations/

[update_catalog]
input-file = invenio_previewer_geoserver/translations/messages.pot
output-dir = invenio_previewer_geoserver/translations/
